--- a/mortgage-calculator.html
+++ b/mortgage-calculator.html
@@ -14,7 +14,7 @@
 
   <!-- HEADER + NAVBAR -->
   <header>
-    <h1>Your Tools Site</h1>
+    <h1>Your Tools</h1>
     <p>Try our range of free online tools</p>
     <nav>
       <ul>
