--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
   <div class="footer-container">
     <p>&copy; 2025 YourTools. All rights reserved.</p>
     <p>Made with ❤️ by You</p>
+    <p><a href="privacy.html" aria-label="Privacy Policy">Privacy Policy</a></p>
   </div>
 </footer>
 </body>
